--- a/index.html
+++ b/index.html
@@ -22,13 +22,11 @@
     </header>
     <section id="hero">
             <div id="hero-signup">
-                <div id="hero-container">
                     <h2>This website is awesome</h2>
                     <p>This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</p>
                     <div id="hero-button">
                         <button>Sign Up</button>
                     </div>
-                </div>
             </div>
             <div id="hero-img">
                 <div class="blank-img">
@@ -36,6 +34,32 @@
                 </div>
             </div>
     </section>
-
+    <section id="information">
+        <div id="header">Some Random information.</div>
+            <div id="box-container">
+                <div class="box-text">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="box-text">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="box-text">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="box-text">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>    
+    </section>
+    <section id="quote">
+        <div id="quote-container">
+            <p id="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+            <p id="quoter">-Thor, God of Thunder</p>
+        </div>
+    </section>
 </body>
 </html>
