--- a/index.html
+++ b/index.html
@@ -61,5 +61,16 @@
             <p id="quoter">-Thor, God of Thunder</p>
         </div>
     </section>
+    <section id="contact">
+        <div id="contact-info">
+            <div id="contact-text">
+                <p><b>Call to action! It's time!</b><br>
+                Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div id="button">
+                <button>Sign up</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
