--- a/index.html
+++ b/index.html
@@ -72,5 +72,8 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>Copyright &#169; The Odin Project 2021</p>
+    </footer>
 </body>
 </html>
